--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,8 @@
     "stylelint": "stylelint src",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public",
-    "postinstall": "husky install"
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix",
-      "yarn test --passWithNoTests"
-    ]
+    "build-storybook": "build-storybook -s ./public"
   },
   "dependencies": {
     "next": "13.0.0",
@@ -44,12 +36,9 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "jest-styled-components": "^7.1.1",
-    "lint-staged": "^13.0.3",
-    "plop": "^3.1.1",
     "storybook-addon-next-router": "^4.0.1",
     "typescript": "4.8.4"
   }
